@@ -25,198 +25,63 @@ class GeventTransportTest(Chai):
 
   def test_init(self):
     assert_equals( bytearray(), self.transport._buffer )
+    assert_false( self.transport._synchronous )
     assert_true( isinstance(self.transport._read_lock,Semaphore) )
     assert_true( isinstance(self.transport._write_lock,Semaphore) )
 
-  def test_connect(self):
-    sock = mock()
-    mock( gevent_transport, 'socket' )
-    expect( gevent_transport.socket.socket ).returns( sock )
-    self.connection._connect_timeout = 4.12
-    self.connection._sock_opts = {
-      ('family','tcp') : 34,
-      ('range','ipv6') : 'hex'
-    }
-
-    expect( sock.setblocking ).args( True )
-    expect( sock.settimeout ).args( 4.12 )
-    expect( sock.setsockopt ).any_order().args( 'family', 'tcp', 34 ).any_order()
-    expect( sock.setsockopt ).any_order().args( 'range', 'ipv6', 'hex' ).any_order()
-    expect( sock.connect ).args( ('host',5309) )
-    expect( sock.settimeout ).args( None )
-
-    self.transport.connect( ('host',5309) )
-
   def test_read(self):
-    self.transport._sock = mock()
     self.transport._read_lock = mock()
-    self.transport.connection.debug = False
-
     expect( self.transport._read_lock.acquire )
-    expect( self.transport._sock.settimeout ).args( None )
-    expect( self.transport._sock.getsockopt ).args(
-      socket.SOL_SOCKET, socket.SO_RCVBUF ).returns( 4095 )
-    expect( self.transport._sock.recv ).args(4095).returns('buffereddata')
+    with expect( mock(gevent_transport,'super') ).args(is_arg(GeventTransport), GeventTransport).returns(mock()) as parent:
+      expect( parent.read ).args(timeout=None).returns( 'somedata' )
     expect( self.transport._read_lock.release )
 
-    assert_equals( 'buffereddata', self.transport.read() )
+    assert_equals( 'somedata', self.transport.read() )
 
-  def test_read_when_data_buffered(self):
-    self.transport._sock = mock()
+  def test_read_when_raises_exception(self):
     self.transport._read_lock = mock()
-    self.transport.connection.debug = False
-    self.transport._buffer = bytearray('buffered')
-
     expect( self.transport._read_lock.acquire )
-    expect( self.transport._sock.settimeout ).args( 3 )
-    expect( self.transport._sock.getsockopt ).any_args().returns( 4095 )
-    expect( self.transport._sock.recv ).args(4095).returns('data')
+    with expect( mock(gevent_transport,'super') ).args(is_arg(GeventTransport), GeventTransport).returns(mock()) as parent:
+      expect( parent.read ).args(timeout='5').raises(Exception('fail'))
     expect( self.transport._read_lock.release )
 
-    assert_equals( 'buffereddata', self.transport.read(3) )
-    assert_equals( bytearray(), self.transport._buffer )
-
-  def test_read_when_debugging(self):
-    self.transport._sock = mock()
-    self.transport._read_lock = mock()
-    self.transport.connection.debug = 2
-
-    expect( self.transport._read_lock.acquire )
-    expect( self.transport._sock.settimeout ).args( None )
-    expect( self.transport._sock.getsockopt ).any_args().returns( 4095 )
-    expect( self.transport._sock.recv ).args(4095).returns('buffereddata')
-    expect( self.transport.connection.logger.debug ).args(
-      'read 12 bytes from server:1234' )
-    expect( self.transport._read_lock.release )
-
-    assert_equals( 'buffereddata', self.transport.read(0) )
-
-  def test_read_when_socket_closes(self):
-    self.transport._sock = mock()
-    self.transport._read_lock = mock()
-    self.transport.connection.debug = 2
-    
-    expect( self.transport._read_lock.acquire )
-    expect( self.transport._sock.settimeout ).args( None )
-    expect( self.transport._sock.getsockopt ).any_args().returns( 4095 )
-    expect( self.transport._sock.recv ).args(4095).returns('')
-    expect( self.transport._read_lock.release )
-    expect( self.transport.connection.transport_closed ).args(
-      msg='error reading from server:1234' )
-    
-    self.transport.read()
-
-  def test_read_when_socket_timeout(self):
-    self.transport._sock = mock()
-    self.transport._read_lock = mock()
-    self.transport.connection.debug = 2
-    
-    expect( self.transport._read_lock.acquire )
-    expect( self.transport._sock.settimeout ).args( 42 )
-    expect( self.transport._sock.getsockopt ).any_args().returns( 4095 )
-    expect( self.transport._sock.recv ).args(4095).raises(
-      socket.timeout('not now') )
-    expect( self.transport._read_lock.release )
-    
-    assert_equals( None, self.transport.read(42) )
-
-  def test_read_when_raises_eagain(self):
-    self.transport._sock = mock()
-    self.transport._read_lock = mock()
-    self.transport.connection.debug = 2
-    
-    expect( self.transport._read_lock.acquire )
-    expect( self.transport._sock.settimeout ).args( 42 )
-    expect( self.transport._sock.getsockopt ).any_args().returns( 4095 )
-    expect( self.transport._sock.recv ).args(4095).raises(
-      EnvironmentError(errno.EAGAIN,'tryagainlater') )
-    expect( self.transport._read_lock.release )
-    
-    assert_equals( None, self.transport.read(42) )
-
-  def test_read_when_raises_other_errno(self):
-    self.transport._sock = mock()
-    self.transport._read_lock = mock()
-    self.transport.connection.debug = 2
-    
-    expect( self.transport._read_lock.acquire )
-    expect( self.transport._sock.settimeout ).args( 42 )
-    expect( self.transport._sock.getsockopt ).any_args().returns( 4095 )
-    expect( self.transport._sock.recv ).args(4095).raises(
-      EnvironmentError(errno.EBADF,'baddog') )
-    expect( self.transport._read_lock.release )
-    
-    with assert_raises(EnvironmentError):
-      self.transport.read(42)
-
-  def test_read_when_no_sock(self):
-    self.transport.read()
+    assert_raises(Exception, self.transport.read, timeout='5')
 
   def test_buffer(self):
-    self.transport._sock = mock()
     self.transport._read_lock = mock()
-    
     expect( self.transport._read_lock.acquire )
+    with expect( mock(gevent_transport,'super') ).args(is_arg(GeventTransport), GeventTransport).returns(mock()) as parent:
+      expect( parent.buffer ).args('datas')
     expect( self.transport._read_lock.release )
 
-    self.transport.buffer( bytearray('somedata') )
-    assert_equals( bytearray('somedata'), self.transport._buffer )
+    self.transport.buffer('datas')
 
-  def test_buffer_when_already_buffered(self):
-    self.transport._sock = mock()
+  def test_buffer_when_raises_exception(self):
     self.transport._read_lock = mock()
-    self.transport._buffer = bytearray('some')
-    
     expect( self.transport._read_lock.acquire )
+    with expect( mock(gevent_transport,'super') ).args(is_arg(GeventTransport), GeventTransport).returns(mock()) as parent:
+      expect( parent.buffer ).args('datas').raises(Exception('fail'))
     expect( self.transport._read_lock.release )
 
-    self.transport.buffer( bytearray('data') )
-    assert_equals( bytearray('somedata'), self.transport._buffer )
-
-  def test_buffer_when_no_sock(self):
-    self.transport.buffer('somedata')
+    assert_raises(Exception, self.transport.buffer, 'datas')
 
   def test_write(self):
-    self.transport._sock = mock()
     self.transport._write_lock = mock()
-    self.transport.connection.debug = False
-
     expect( self.transport._write_lock.acquire )
-    expect( self.transport._sock.sendall ).args( 'somedata' )
+    with expect( mock(gevent_transport,'super') ).args(is_arg(GeventTransport), GeventTransport).returns(mock()) as parent:
+      expect( parent.write ).args('datas')
     expect( self.transport._write_lock.release )
-    self.transport.write( 'somedata' )
 
-  def test_write_when_sendall_fails(self):
-    self.transport._sock = mock()
+    self.transport.write('datas')
+
+  def test_write_when_raises_an_exception(self):
     self.transport._write_lock = mock()
-    self.transport.connection.debug = False
-
     expect( self.transport._write_lock.acquire )
-    expect( self.transport._sock.sendall ).args( 'somedata' ).raises(Exception('fail'))
+    with expect( mock(gevent_transport,'super') ).args(is_arg(GeventTransport), GeventTransport).returns(mock()) as parent:
+      expect( parent.write ).args('datas').raises(Exception('fail'))
     expect( self.transport._write_lock.release )
-    assert_raises(Exception, self.transport.write, 'somedata' )
 
-  def test_write_when_debugging(self):
-    self.transport._sock = mock()
-    self.transport.connection.debug = 2
-
-    expect( self.transport._sock.sendall ).args( 'somedata' )
-    expect( self.transport.connection.logger.debug ).args(
-      'sent 8 bytes to server:1234' )
-
-    self.transport.write( 'somedata' )
-
-  def test_write_when_no_sock(self):
-    self.transport.write('somedata')
-
-  def test_disconnect(self):
-    self.transport._sock = mock()
-    expect( self.transport._sock.close )
-    self.transport.disconnect()
-    assert_equals( None, self.transport._sock )
-  
-  def test_disconnect_when_no_sock(self):
-    self.transport.disconnect()
+    assert_raises(Exception, self.transport.write, 'datas')
 
 class GeventPoolTransportTest(Chai):
 
