@@ -1,10 +1,10 @@
 '''
-Copyright (c) 2011, Agora Games, LLC All rights reserved.
+Copyright (c) 2012, Agora Games, LLC All rights reserved.
 
 https://github.com/agoragames/haigha/blob/master/LICENSE.txt
 '''
 
-from haigha.transports import Transport
+from haigha.transports.socket_transport import SocketTransport
 
 import errno
 try:
@@ -19,8 +19,8 @@ except ImportError:
   socket = None
   pool = None
 
-# TODO: there's a good chance that this should inherit from SocketTransport
-class GeventTransport(Transport):
+
+class GeventTransport(SocketTransport):
   '''
   Transport using gevent backend. It relies on gevent's implementation of 
   sendall to send whole frames at a time. On the input side, it uses a gevent
@@ -49,96 +49,33 @@ class GeventTransport(Transport):
 
     # TODO: support both modes
     self._synchronous = False
-
-    self._buffer = bytearray()
     self._read_lock = Semaphore()
     self._write_lock = Semaphore()
 
   ###
   ### Transport API
   ###
-  def connect(self, (host,port)):
-    '''
-    Connect assuming a host and port tuple.
-    '''
-    self._host = "%s:%s"%(host,port)
-    self._sock = socket.socket()
-    self._sock.setblocking( True )
-    self._sock.settimeout( self.connection._connect_timeout )
-    if self.connection._sock_opts:
-      for k,v in self.connection._sock_opts.iteritems():
-        family,type = k
-        self._sock.setsockopt(family, type, v)
-    self._sock.connect( (host,port) )
 
-    # After connecting, switch to full-blocking mode.
-    self._sock.settimeout( None )
+  # nothing to overload with connect()
 
   def read(self, timeout=None):
     '''
     Read from the transport. If no data is available, should return None. If
     timeout>0, will only block for `timeout` seconds.
     '''
-    # NOTE: copying over this comment from Connection, because there is
-    # knowledge captured here, even if the details are stale
-    # Because of the timer callback to dataRead when we re-buffered, there's a
-    # chance that in between we've lost the socket.  If that's the case, just
-    # silently return as some code elsewhere would have already notified us.
-    # That bug could be fixed by improving the message reading so that we consume
-    # all possible messages and ensure that only a partial message was rebuffered,
-    # so that we can rely on the next read event to read the subsequent message.
-    if not hasattr(self,'_sock'):
-      return None
-
     self._read_lock.acquire()
     try:
-      # Note that we ignore both None and 0, i.e. we either block with a
-      # timeout or block completely and let gevent sort it out.
-      if timeout:
-        self._sock.settimeout( timeout )
-      else:
-        self._sock.settimeout( None )
-      data = self._sock.recv( self._sock.getsockopt(socket.SOL_SOCKET,socket.SO_RCVBUF) )
-
-      if len(data):
-        if self.connection.debug > 1:
-          self.connection.logger.debug( 'read %d bytes from %s'%(len(data), self._host) )
-        if len(self._buffer):
-          self._buffer.extend( data )
-          data = self._buffer
-          self._buffer = bytearray()
-        return data
-
-    except socket.timeout as e:
-      # Note that this is implemented differently and though it would be
-      # caught as an EnvironmentError, it has no errno. Not sure whose
-      # fault that is.
-      return None
-
-    except EnvironmentError as e:
-      if e.errno in (errno.EAGAIN,errno.EWOULDBLOCK):
-        return None
-      raise
-        
+      return super(GeventTransport,self).read(timeout=timeout)
     finally:
       self._read_lock.release()
-
-    self.connection.transport_closed( msg='error reading from %s'%(self._host) )
 
   def buffer(self, data):
     '''
     Buffer unused bytes from the input stream.
     '''
-    if not hasattr(self,'_sock'):
-      return None
-
     self._read_lock.acquire()
     try:
-      # data will always be a byte array
-      if len(self._buffer):
-        self._buffer.extend( data )
-      else:
-        self._buffer = bytearray(data)
+      return super(GeventTransport,self).buffer(data)
     finally:
       self._read_lock.release()
 
@@ -146,37 +83,16 @@ class GeventTransport(Transport):
     '''
     Write some bytes to the transport.
     '''
-    if not hasattr(self,'_sock'):
-      return None
-
     # MUST use a lock here else gevent could raise an exception if 2 greenlets
     # try to write at the same time. I was hoping that sendall() would do that
     # blocking for me, but I guess not. May require an eventsocket-like buffer
     # to speed up under high load.
     self._write_lock.acquire()
     try:
-      self._sock.sendall( data )
+      return super(GeventTransport,self).write(data)
     finally:
       self._write_lock.release()
 
-    if self.connection.debug > 1:
-      self.connection.logger.debug( 'sent %d bytes to %s'%(len(data), self._host) )
-    
-  def disconnect(self):
-    '''
-    Disconnect from the transport. Typically socket.close(). This call is 
-    welcome to raise exceptions, which the Connection will catch.
-
-    The transport is encouraged to allow for any pending writes to complete
-    before closing the socket.
-    '''
-    if not hasattr(self,'_sock'):
-      return None
-
-    try:
-      self._sock.close()
-    finally:
-      self._sock = None
 
 class GeventPoolTransport(GeventTransport):
 
